# CNN_Classifier_MLOPS

./: .gitignore  README.md  dvc.yaml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py  tox.ini
.github/workflows/: ci.yaml
configs/: config.yaml
prediction_dir/: Dockerfile  prediction_trial.py
research/: stage_01.ipynb  stage_02.ipynb  stage_03.ipynb  stage_04.ipynb  stage_05.ipynb  trials.ipynb
research/mlflow_dir/: example.py  mlflow.db
research/mlflow_dir/mlruns/0/: meta.yaml
research/mlflow_dir/mlruns/0/3020e744c37b400ea99b226e8b9a5204/: meta.yaml
research/mlflow_dir/mlruns/0/3020e744c37b400ea99b226e8b9a5204/metrics/: mae  r2  rmse
research/mlflow_dir/mlruns/0/440fdf2999944f778ea55978ad691776/: meta.yaml
research/mlflow_dir/mlruns/0/bad77b281e9d4653a8b82a9cf5d392d7/: meta.yaml
src/DeepClassifier/: __init__.py
src/DeepClassifier/components/: __init__.py  data_ingestion.py
src/DeepClassifier/config/: configuration.py
src/DeepClassifier/pipeline/: s01_data_ingestion.py
src/DeepClassifier/utils/: __init__.py  common.py
src/deepclassifier/components/: __init__.py  evaluation.py  prepare_base_model.py  prepare_callbacks.py  training.py
src/deepclassifier/config/: configuration.py
src/deepclassifier/constants/: __init__.py
src/deepclassifier/entity/: __init__.py  config_entity.py
src/deepclassifier/pipeline/: s02_prepare_base_model.py  s03_training.py  s04_evaluation.py
src/deepclassifier/utils/: common.py
tests/integration/: test_integration.py
tests/unit/: test_utils.py
(+27 files in other folders)
